# nake

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  cleanup.yml  pr.yml  release.yml
bash/: main.go
cmd/: apply.go  build.go  clean.go  init.go  plan.go  precommit.go  root.go  update.go  versions-tf.go
docker/: main.go  main_test.go
gnumake/: .main.go.swp  main.go
log/: main.go
nake/: nake.py  precommit.py
nake/envrc/: __init__.py  terraform.sh
nake/gitlabci/: __init__.py  test.py
nake/make/: __init__.py  docker.mk  test.py
nake/precommit/: __init__.py  default.yml  terraform.yml
nake/templates/: __init__.py
nake/templates/default/: .releaserc.json
nake/templates/terraform/: backend.tf
nake/terraform/: __init__.py
precommit/: gen.go  rules.go
precommit/repos/: default.yaml  go.yaml  hcl.yaml  python.yaml  shell.yaml  yaml.yaml
repo/: main.go
terraform/: main.go  main_test.go  versions.go  versions_test.go
terraform/fixtures/: strict.off.tf  strict.tf
