[tool.poetry]
name = "nake"
version = "1.5.0"
description = "Project dotfiles"
authors = ["Mike Christofilopoulos <mhristof@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nake = 'nake.nake:main'

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
requests = "^2.28.2"
ruamel-yaml = "^0.17.21"
jinja2 = "^3.1.2"
python-hcl2 = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
